--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,13 @@
-<header>Header</header>
+<header>
+  <div class="logo">
+    <a href="#">SHOP</a>
+  </div>
+  <div class="nav-bar">
+    <ul>
+      <li>Home</li>
+      <li>Product</li>
+      <li>Bloc</li>
+      <li>Contact</li>
+    </ul>
+  </div>
+</header>
