--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,22 @@
 header {
+  display: flex;
   background-color: aqua;
   height: 80px;
   color: rgb(24, 4, 4);
   text-align: center;
+  align-items: center;
+  padding: 0 10px;
+  justify-content: space-between;
+  font-size: 2rem;
+}
+
+header .nav-bar ul {
+  display: flex;
+  gap: 20px;
+  list-style: none;
+}
+header a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
 }
