--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,10 @@
-<footer>Shope footer</footer>
+<footer>
+
+  <div class="footer-content">
+    Shope footer
+  </div>
+
+  <div class="footer-bottom">
+
+  </div>
+</footer>
