Création et décoration du premier composat product-item

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,6 @@
 header {
   display: flex;
-  background-color: aqua;
+  background-color: rgb(60, 251, 251);
   height: 80px;
   color: rgb(24, 4, 4);
   text-align: center;
