Amélioration de Header et duplication de composant item-product

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,10 +4,10 @@
   </div>
   <div class="nav-bar">
     <ul>
-      <li>Home</li>
-      <li>Product</li>
-      <li>Bloc</li>
-      <li>Contact</li>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Product</a></li>
+      <li><a href="#">Bloc</a></li>
+      <li><a href="#">Contact</a></li>
     </ul>
   </div>
 </header>
