--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -8,6 +8,8 @@ header {
   padding: 0 10px;
   justify-content: space-between;
   font-size: 2rem;
+  position: sticky;
+  top: 0;
 }
 
 header .nav-bar ul {
