--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,3 +1,13 @@
 <div class="product-list">
   <app-product-item></app-product-item>
+  <app-product-item></app-product-item>
+  <app-product-item></app-product-item>
+  <app-product-item></app-product-item>
+  <app-product-item></app-product-item>
+  <app-product-item></app-product-item>
+  <app-product-item></app-product-item>
+  <app-product-item></app-product-item>
+  <app-product-item></app-product-item>
+  <app-product-item></app-product-item>
+  <app-product-item></app-product-item>
 </div>
