Création de l'interface pour la structeur de données

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <div class="logo">
-    <a href="#">SHOP</a>
+    <a href="#">{{title}}</a>
   </div>
   <div class="nav-bar">
     <ul>
