--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -4,7 +4,8 @@
   </div>
   <div class="product-details">
     <div class="product-name">
-      <h2>Décoration maison </h2>
+      <h1 *ngIf="true">{{date | date:'dd/MM/yyyy'}}</h1>
+      <h2> </h2>
     </div>
     <div class="product-price">
       <h3>$ 200.99</h3>
