--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,3 +1,17 @@
+{{products[0].name|json}}
+{{products[0].created_at|json}}
+{{products[0].name|json}}
+{{products[0].created_at|json}}
+{{products[0].name|json}}
+{{products[0].created_at|json}}
+{{products[0].name|json}}
+{{products[0].created_at|json}}
+{{products[0].name|json}}
+{{products[0].created_at|json}}
+{{products[0].name|json}}
+{{products[0].created_at|json}}
+{{products[0].name|json}}
+
 <div class="product-list">
   <app-product-item></app-product-item>
   <app-product-item></app-product-item>
