--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -7,7 +7,7 @@ header {
   align-items: center;
   padding: 0 10px;
   justify-content: space-between;
-  font-size: 2rem;
+  font-size: 1.6rem;
   position: sticky;
   top: 0;
 }
@@ -21,4 +21,12 @@ header a {
   text-decoration: none;
   color: white;
   font-weight: bold;
+}
+@media screen and (max-width: 900px) {
+  header .nav-bar {
+    display: none;
+  }
+  header {
+    justify-content: center;
+  }
 }
