--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -1,16 +1,16 @@
 <div class="product-item">
   <div class="product-image">
-    <img src="../assets/images/products/maison7.png" width="300px" height="300px" alt="">
+    <!-- <img src="../assets/images/products/maison7.png" width="300px" height="300px" alt=""> -->
+    <img [src]="product? product.imageUrl[4] : ''" width="300px" height="300px" [alt]="product? 'Maison sauvage': ''">
   </div>
   <div class="product-details">
     <div class="product-name">
-      <h1 *ngIf="true">{{date | date:'dd/MM/yyyy'}}</h1>
-      <h2> </h2>
+      <h2>{{product?.description}}</h2>
     </div>
     <div class="product-price">
-      <h3>$ 200.99</h3>
+      <h3>$ {{(product?.sold_price || 0)/100}}</h3>
       <del>
-        <h3>$ 299.99</h3>
+        <h3>$ {{(product?.regular_price || 0)/100}}</h3>
       </del>
     </div>
   </div>
