--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,18 +1,22 @@
 {{products[0].name|json}}
-{{products[0].created_at|json}}
+<!-- {{products[0].created_at|json}}
 {{products[0].name|json}}
 {{products[0].created_at|json}}
 {{products[0].name|json}}
 {{products[0].created_at|json}}
 {{products[0].name|json}}
 {{products[0].created_at|json}}
+{{products[0].name|json}} -->
+<!-- {{products[0].created_at|json}}
 {{products[0].name|json}}
 {{products[0].created_at|json}}
-{{products[0].name|json}}
-{{products[0].created_at|json}}
-{{products[0].name|json}}
+{{products[0].name|json}} -->
 
 <div class="product-list">
+  <!--La variable product est défini dans le component product-item-->
+  <!-- <app-product-item [product]=products[0]></app-product-item> -->
+  <app-product-item *ngFor="let product of products" [product]=product></app-product-item>
+  <!-- <app-product-item></app-product-item>
   <app-product-item></app-product-item>
   <app-product-item></app-product-item>
   <app-product-item></app-product-item>
@@ -21,7 +25,5 @@
   <app-product-item></app-product-item>
   <app-product-item></app-product-item>
   <app-product-item></app-product-item>
-  <app-product-item></app-product-item>
-  <app-product-item></app-product-item>
-  <app-product-item></app-product-item>
+  <app-product-item></app-product-item> -->
 </div>
