--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -5,7 +5,8 @@
   </div>
   <div class="product-details">
     <div class="product-name">
-      <h2>{{product?.description}}</h2>
+      <h2>{{product?.name?.substring(0, 40) }} {{ product && product.name[41] ?
+        "..." : null }}</h2>
     </div>
     <div class="product-price">
       <h3>$ {{(product?.sold_price || 0)/100}}</h3>
