Mise en place de Modale

--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -11,6 +11,7 @@
   <div *ngIf="!products.length" class="bar">
     Désolé aucun article n'est disponible pour le moment
   </div>
+  <app-modal-product-view></app-modal-product-view>
   <!-- <app-product-item></app-product-item>
   <app-product-item></app-product-item>
   <app-product-item></app-product-item>
