--- a/src/app/components/modal-product-view/modal-product-view.component.css
+++ b/src/app/components/modal-product-view/modal-product-view.component.css
@@ -1,6 +1,6 @@
 .modal-product-view-container {
   height: 400px;
-  width: 600px;
+  width: 650px;
   background-color: white;
   position: fixed;
   top: 50%;
@@ -17,4 +17,21 @@
   position: fixed;
   top: 0;
   left: 0;
+}
+.modal-product-view-container img {
+  width: 100%;
+  height: 100%;
+}
+/* .modal-details-view {
+  display: flex;
+}
+.modal-image-view {
+  display: flex;
+}
+.modal-product-view-details {
+  padding: 40px;
+} */
+.modal-product-view-details {
+  text-align: center;
+  align-items: center;
 }
