--- a/src/app/components/modal-product-view/modal-product-view.component.html
+++ b/src/app/components/modal-product-view/modal-product-view.component.html
@@ -1,6 +1,22 @@
 <div class="modal-product-view">
   <div class="overly"></div>
-  <div class="modal-product-view-container">
-
+  <div class="modal-product-view-container flex">
+    <div class="modal-product-view-image flex-1">
+      <img src="./assets/images/products/maison_2/1.png" alt="" srcset="">
+    </div>
+    <div class="modal-product-view-details flex-1 flex jcc aic column">
+      <!-- <h1>Product détails</h1> -->
+      <h2>Name</h2>
+      <div class="modal-product-view-details-price">
+        <h4>$ 19.99</h4>
+        <del>
+          <h4>$ 59.99</h4>
+        </del>
+      </div>
+      <div class="modal-product-view-details-created-at">
+        Crée le : 12/12/2025
+      </div>
+      <button class="btn close">Fermer</button>
+    </div>
   </div>
 </div>
