--- a/src/app/components/modal-product-view/modal-product-view.component.css
+++ b/src/app/components/modal-product-view/modal-product-view.component.css
@@ -35,3 +35,9 @@
   text-align: center;
   align-items: center;
 }
+
+@media screen and (max-width: 650px) {
+  .modal-product-view-container {
+    width: 95%;
+  }
+}
