--- a/src/app/components/modal-product-view/modal-product-view.component.html
+++ b/src/app/components/modal-product-view/modal-product-view.component.html
@@ -6,17 +6,17 @@
     </div>
     <div class="modal-product-view-details flex-1 flex jcc aic column">
       <!-- <h1>Product détails</h1> -->
-      <h2>Name</h2>
+      <h2>{{productss?.name?.substring(0, 25)}}</h2>
       <div class="modal-product-view-details-price">
-        <h4>$ 19.99</h4>
+        <h4>$ {{(productss?.regular_price || 0)/100}}</h4>
         <del>
-          <h4>$ 59.99</h4>
+          <h4>$ {{(productss?.sold_price || 0)/100 }}</h4>
         </del>
       </div>
       <div class="modal-product-view-details-created-at">
         Crée le : 12/12/2025
       </div>
-      <button class="btn close">Fermer</button>
+      <button (click)="fermerAffichage()" class="btn close">Fermer</button>
     </div>
   </div>
 </div>
