--- a/src/app/components/product-item/product-item.component.css
+++ b/src/app/components/product-item/product-item.component.css
@@ -11,11 +11,16 @@
   cursor: pointer;
 }
 .product-item .product-image img {
-  width: 400px;
+  width: 100%;
   height: 400px;
 }
 .product-item .product-details .product-price {
   display: flex;
   gap: 20px;
   justify-content: center;
+}
+@media screen and (max-width: 450px) {
+  .product-item {
+    width: 100%;
+  }
 }
