--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -1,17 +1,18 @@
-<div class="product-item" (click)="deleteProduct(product)">
+<div class="product-item" (click)="envoieDonneesProduitCliquer(productsss)">
   <div class="product-image">
     <!-- <img src="../assets/images/products/maison7.png" width="300px" height="300px" alt=""> -->
-    <img [src]="product? product.imageUrl[4] : ''" width="300px" height="300px" [alt]="product? 'Maison sauvage': ''">
+    <img [src]="productsss? productsss.imageUrl[4] : ''" width="300px" height="300px"
+      [alt]="productsss? 'Maison sauvage': ''">
   </div>
   <div class="product-details">
     <div class="product-name">
-      <h2>{{product?.name?.substring(0, 40) }} {{ product && product.name[41] ?
+      <h2>{{productsss?.name?.substring(0, 40) }} {{ productsss && productsss.name[41] ?
         "..." : null }}</h2>
     </div>
     <div class="product-price">
-      <h3>$ {{(product?.sold_price || 0)/100}}</h3>
+      <h3>$ {{(productsss?.sold_price || 0)/100}}</h3>
       <del>
-        <h3>$ {{(product?.regular_price || 0)/100}}</h3>
+        <h3>$ {{(productsss?.regular_price || 0)/100}}</h3>
       </del>
     </div>
   </div>
