--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,25 +1,13 @@
 <div class="product-list">
   <!--La variable product est défini dans le component product-item-->
   <!-- <app-product-item [product]=products[0]></app-product-item> -->
-  <app-product-item *ngFor="let product of products" [product]=product (deleteProductItem)="handleDeletProduct($event)">
+  <app-product-item *ngFor="let product of products" [productsss]=product (handleProduct)="handleProduct($event)">
   </app-product-item>
 
-  <!-- <div *ngIf="products.length == 0" class="loadPage">
-    <h1>Please waite for data </h1>
-    <img src="../../assets/Loading_2.gif" alt="../../assets/load.webp" width="300px" height="300px">
-  </div> -->
   <div *ngIf="!products.length" class="bar">
     Désolé aucun article n'est disponible pour le moment
   </div>
-  <app-modal-product-view></app-modal-product-view>
-  <!-- <app-product-item></app-product-item>
-  <app-product-item></app-product-item>
-  <app-product-item></app-product-item>
-  <app-product-item></app-product-item>
-  <app-product-item></app-product-item>
-  <app-product-item></app-product-item>
-  <app-product-item></app-product-item>
-  <app-product-item></app-product-item>
-  <app-product-item></app-product-item>
-  <app-product-item></app-product-item> -->
+  <app-modal-product-view (isDisplayModal)="fermerAffichage()" *ngIf="displayProduit && modalProduct"
+    [productss]=modalProduct></app-modal-product-view>
+
 </div>
