Ajout les variable d'environnement

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,7 +7,7 @@
       <li><a href="#">Home</a></li>
       <li><a href="#">Product</a></li>
       <li><a href="#">Bloc</a></li>
-      <li><a href="#">{{data}}</a></li>
+      <li><a href="#">Contact</a></li>
     </ul>
   </div>
 </header>
