Excercice sur les formulires dans le composant auth -signinup-

--- a/src/app/components/container/container.component.html
+++ b/src/app/components/container/container.component.html
@@ -1,3 +1,4 @@
 <div class="container">
-  <app-product-list></app-product-list>
+  <app-signup></app-signup>
+  <!-- <app-product-list></app-product-list> -->
 </div>
