--- a/src/app/components/auth/signup/signup.component.css
+++ b/src/app/components/auth/signup/signup.component.css
@@ -1,43 +1,32 @@
-.signin {
-  width: 600px;
-  height: 600px;
-  margin: 20px auto;
-  border: 1px solid blue;
-}
-.form-inline input {
-  border: 0.1px solid #ccc;
-  width: 60%;
-  height: 40px;
-  margin: 5px;
-  padding: 0 10px;
-  font-size: 1.2rem;
-}
-.form-inline button {
-  height: 40px;
-  background-color: #1d1d1d;
-  border: none;
-  width: 100px;
-  color: white;
-  cursor: pointer;
-  font-weight: bold;
+.signup {
+  height: 70vh;
 }
 .btn {
   font-size: 1.4rem;
   height: 40px;
   background-color: #1d1d1d;
   border: none;
-  min-width: 100px;
+  min-width: 100%;
   color: white;
   cursor: pointer;
   font-weight: bold;
 }
-.signin ul {
-  list-style: none;
-  padding: 0;
-  margin: 5px;
+.form-container {
+  width: 600px;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* border: solid #ccc; */
+  background-color: white;
 }
-.signin ul li {
-  border: 0.1px solid #1d1d1d;
-  justify-content: space-between;
-  padding: 5px;
+form {
+  /* border: 0.1px solid black; */
+}
+form .form-line {
+  height: 40px;
+  padding: 10px;
+}
+form .form-line input {
+  font-size: 1.4rem;
 }
