--- a/src/app/components/auth/signup/signup.component.css
+++ b/src/app/components/auth/signup/signup.component.css
@@ -12,7 +12,7 @@
   font-weight: bold;
 }
 .form-container {
-  width: 600px;
+  width: 500px;
   position: relative;
   top: 50%;
   left: 50%;
@@ -20,13 +20,16 @@
   /* border: solid #ccc; */
   background-color: white;
 }
-form {
-  /* border: 0.1px solid black; */
-}
 form .form-line {
-  height: 40px;
+  min-height: 40px;
   padding: 10px;
 }
 form .form-line input {
-  font-size: 1.4rem;
+  font-size: 1.1rem;
+  height: 40px;
+}
+@media screen and (max-width: 550px) {
+  .form-container {
+    width: 90%;
+  }
 }
