--- a/src/app/components/auth/signup/signup.component.html
+++ b/src/app/components/auth/signup/signup.component.html
@@ -19,7 +19,7 @@
           [(ngModel)]="user.passewordConfirme">
       </div>
       <div class="button_flex">
-        <button class="btn flex-1" (click)="recuperDonnees()">S'inscrire</button>
+        <button class="btn flex-1" (click)="handleSubmit()">S'inscrire</button>
       </div>
     </form>
   </div>
