--- a/src/app/components/container/container.component.html
+++ b/src/app/components/container/container.component.html
@@ -1,4 +1,5 @@
 <div class="container">
-  <app-signup></app-signup>
+  <!-- <app-signup></app-signup> -->
   <!-- <app-product-list></app-product-list> -->
+  <app-signin></app-signin>
 </div>
