--- a/src/styles.css
+++ b/src/styles.css
@@ -40,3 +40,40 @@ body {
 .gap-10 {
   gap: 10px;
 }
+
+/*****************Signin et signup*************/
+.signup {
+  height: 70vh;
+}
+.btn {
+  font-size: 1.4rem;
+  height: 40px;
+  background-color: #1d1d1d;
+  border: none;
+  min-width: 100%;
+  color: white;
+  cursor: pointer;
+  font-weight: bold;
+}
+.form-container {
+  width: 500px;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* border: solid #ccc; */
+  background-color: white;
+}
+form .form-line {
+  min-height: 40px;
+  padding: 10px;
+}
+form .form-line input {
+  font-size: 1.1rem;
+  height: 40px;
+}
+@media screen and (max-width: 550px) {
+  .form-container {
+    width: 90%;
+  }
+}
