Ajout des routes

--- a/src/app/components/auth/signin/signin.component.html
+++ b/src/app/components/auth/signin/signin.component.html
@@ -24,7 +24,7 @@
         <p *ngIf="passeword.hasError('required')">Le passeword is required</p>
         <p *ngIf="!passeword.hasError('minLength')">Le passeword doit avoir minimum 6 caractères</p>
       </div>
-      <div class="error" *ngIf="">Le mot de pass doit avoir au minimum 6 caractères </div>
+      <!-- <div class="error" *ngIf="">Le mot de pass doit avoir au minimum 6 caractères </div> -->
       <!-- <h4 *ngIf="!signinForm.status">Passeword n'est pas valid</h4> -->
       <!-- <div class="form-line flex">
         <input class="flex-1" type="password" name="passewordConfirm" placeholder="Your passeword confirme ..."
