--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,10 +4,9 @@
   </div>
   <div class="nav-bar">
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Product</a></li>
-      <li><a href="#">Bloc</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a routerLink="">Home</a></li>
+      <li><a routerLink="signin">Sign In</a></li>
+      <li><a routerLink="signup">Sign Up</a></li>
     </ul>
   </div>
 </header>
