--- a/src/app/components/container/container.component.html
+++ b/src/app/components/container/container.component.html
@@ -1,5 +1,5 @@
 <div class="container">
   <!-- <app-signup></app-signup> -->
-  <!-- <app-product-list></app-product-list> -->
-  <app-signin></app-signin>
+  <app-product-list></app-product-list>
+  <!-- <app-signin></app-signin> -->
 </div>
