Création de la logique de la page product

--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,1 +1,23 @@
-<p>product works!</p>
+<!-- <div class="modal-product-view">
+  <div class="overly"></div>
+  <div class="modal-product-view-container flex">
+    <div class="modal-product-view-image flex-1">
+      <img src="./assets/images/products/maison_2/1.png" alt="" srcset="">
+    </div>
+    <div class="modal-product-view-details flex-1 flex jcc aic column">
+       <h1>Product détails</h1> -->
+<!--<h2>{{productss?.name?.substring(0, 25)}}</h2>
+      <div class="modal-product-view-details-price">
+        <h4>$ {{(productss?.regular_price || 0)/100}}</h4>
+        <del>
+          <h4>$ {{(productss?.sold_price || 0)/100 }}</h4>
+        </del>
+      </div>
+      <div class="modal-product-view-details-created-at">
+        Crée le : 12/12/2025
+      </div>
+       <button (click)="fermerAffichage()" class="btn close">Fermer</button> -->
+<!--</div>
+  </div>
+</div> -->
+<p>{{product | json}}</p>
