--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,23 +1,22 @@
-<!-- <div class="modal-product-view">
-  <div class="overly"></div>
-  <div class="modal-product-view-container flex">
-    <div class="modal-product-view-image flex-1">
-      <img src="./assets/images/products/maison_2/1.png" alt="" srcset="">
-    </div>
-    <div class="modal-product-view-details flex-1 flex jcc aic column">
-       <h1>Product détails</h1> -->
-<!--<h2>{{productss?.name?.substring(0, 25)}}</h2>
-      <div class="modal-product-view-details-price">
-        <h4>$ {{(productss?.regular_price || 0)/100}}</h4>
-        <del>
-          <h4>$ {{(productss?.sold_price || 0)/100 }}</h4>
-        </del>
-      </div>
-      <div class="modal-product-view-details-created-at">
-        Crée le : 12/12/2025
-      </div>
-       <button (click)="fermerAffichage()" class="btn close">Fermer</button> -->
-<!--</div>
+<!-- <p>{{product | json}}</p> -->
+<div class="single-product flex gap-10 content ">
+  <div class="single-product-image flex-1  flex">
+    <!-- <img src="./assets/images/products/maison_2/1.png" alt="" srcset=""> -->
+    <img [src]="product? product.imageUrl[0] : ''" [alt]="product?.name" srcset="">
+
   </div>
-</div> -->
-<p>{{product | json}}</p>
+  <div class="modal-product-view-details flex-1 ">
+    <!-- <h1>Product détails</h1> -->
+    <h2>{{product?.name?.substring(0, 25)}}</h2>
+    <div class="modal-product-view-details-price">
+      <h4>$ {{(product?.regular_price || 0)/100 | currency: "CAD "}}</h4>
+      <del>
+        <h4>$ {{(product?.sold_price || 0)/100 | currency: "CAD " }}</h4>
+      </del>
+    </div>
+    <div class="modal-product-view-details-created-at">
+      Crée le : 12/12/2025
+    </div>
+    <!-- <button (click)="fermerAffichage()" class="btn close">Fermer</button> -->
+  </div>
+</div>
