--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,9 @@ body {
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
+.b {
+  border: 0.1px solid black;
+}
 .flex {
   display: flex;
 }
@@ -40,7 +43,17 @@ body {
 .gap-10 {
   gap: 10px;
 }
+.content {
+  width: 80%;
+  margin: 0 auto;
+  min-height: 70vh;
+}
 
+@media screen and (max-width: 1200px) {
+  .content {
+    width: 95%;
+  }
+}
 /*****************Signin et signup*************/
 .signup {
   height: 70vh;
@@ -77,3 +90,5 @@ form .form-line input {
     width: 90%;
   }
 }
+
+/********** Single Product *************/
