--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -1,21 +1,25 @@
-<a [routerLink]="['product', productsss?.slug]">
-  <div class="product-item" (click)="envoieDonneesProduitCliquer(productsss)">
-    <div class="product-image">
-      <!-- <img src="../assets/images/products/maison7.png" width="300px" height="300px" alt=""> -->
-      <img [src]="productsss? productsss.imageUrl[4] : ''" width="300px" height="300px"
-        [alt]="productsss? 'Maison sauvage': ''">
+<div class="product-item">
+  <div class="product-image">
+    <!-- <img src="../assets/images/products/maison7.png" width="300px" height="300px" alt=""> -->
+    <img [src]="productsss? productsss.imageUrl[4] : ''" width="300px" height="300px"
+      [alt]="productsss? 'Maison sauvage': ''">
+  </div>
+  <div class="product-details">
+    <div class="product-name">
+      <h2>{{productsss?.name?.substring(0, 40) }} {{ productsss && productsss.name[41] ?
+        "..." : null }}</h2>
     </div>
-    <div class="product-details">
-      <div class="product-name">
-        <h2>{{productsss?.name?.substring(0, 40) }} {{ productsss && productsss.name[41] ?
-          "..." : null }}</h2>
-      </div>
-      <div class="product-price">
-        <h3>$ {{(productsss?.sold_price || 0)/100}}</h3>
-        <del>
-          <h3>$ {{(productsss?.regular_price || 0)/100}}</h3>
-        </del>
-      </div>
+    <div class="product-price">
+      <h3>$ {{(productsss?.sold_price || 0)/100}}</h3>
+      <del>
+        <h3>$ {{(productsss?.regular_price || 0)/100}}</h3>
+      </del>
+    </div>
+    <div class="product-action-button flex gap-10 jcc">
+      <button class="btn" (click)="envoieDonneesProduitCliquer(productsss)">Quick View</button>
+      <button class="btn" [routerLink]="['product', productsss?.slug]">
+        Détails view
+      </button>
     </div>
   </div>
-</a>
+</div>
