Ajout du composant loading

--- a/src/app/components/container/container.component.html
+++ b/src/app/components/container/container.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <!-- <app-signup></app-signup> -->
   <app-product-list></app-product-list>
+  <!-- <app-loading></app-loading> -->
   <!-- <app-signin></app-signin> -->
 </div>
