--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,10 +1,15 @@
-<div class="product-list">
-  <!--La variable product est défini dans le component product-item-->
-  <!-- <app-product-item [product]=products[0]></app-product-item> -->
-  <app-product-item *ngFor="let product of products" [productsss]=product (handleProduct)="handleProduct($event)">
-  </app-product-item>
+<app-loading *ngIf="isLoading"></app-loading>
+<div *ngIf="!isLoading && products.length">
+  <div class="product-list">
+    <!--La variable product est défini dans le component product-item-->
+    <!-- <app-product-item [product]=products[0]></app-product-item> -->
+    <app-product-item *ngFor="let product of products" [productsss]=product (handleProduct)="handleProduct($event)">
 
-  <div *ngIf="!products.length" class="bar">
+    </app-product-item>
+  </div>
+
+
+  <div class="bar" *ngIf="!isLoading && !products.length">
     Désolé aucun article n'est disponible pour le moment
   </div>
   <app-modal-product-view (isDisplayModal)="fermerAffichage()" *ngIf="displayProduit && modalProduct"
