--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header>app-header</app-header>
 <!-- <app-container>app-container</app-container> -->
 <router-outlet></router-outlet>
-
+<!-- <app-loading></app-loading> -->
 <app-footer>app-footer</app-footer>
