Fin de la première partie de notre site

--- a/src/app/components/product-item/product-item.component.css
+++ b/src/app/components/product-item/product-item.component.css
@@ -22,6 +22,10 @@ a {
   gap: 20px;
   justify-content: center;
 }
+button:hover {
+  background-color: antiquewhite;
+  color: black;
+}
 @media screen and (max-width: 450px) {
   .product-item {
     width: 100%;
