--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,7 +1,7 @@
 /* footer {
 } */
 .footer-content {
-  background-color: rgb(60, 251, 251);
+  background-color: #3f51b5;
   height: calc(100vh - 70vh - 80px);
   display: flex;
   align-items: center;
