--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,6 +1,6 @@
 header {
   display: flex;
-  background-color: rgb(60, 251, 251);
+  background-color: #3f51b5;
   height: 80px;
   color: rgb(24, 4, 4);
   text-align: center;
@@ -10,8 +10,11 @@ header {
   font-size: 1.6rem;
   position: sticky;
   top: 0;
+  box-shadow: 0 3px 5px -1px #0003, 0.6px 10px #00000024, 0 1px 18px #0000001f;
 }
-
+.logo {
+  text-transform: uppercase;
+}
 header .nav-bar ul {
   display: flex;
   gap: 20px;
@@ -21,6 +24,7 @@ header a {
   text-decoration: none;
   color: white;
   font-weight: bold;
+  text-transform: uppercase;
 }
 @media screen and (max-width: 900px) {
   header .nav-bar {
