--- a/src/app/components/product-item/product-item.component.css
+++ b/src/app/components/product-item/product-item.component.css
@@ -6,21 +6,38 @@ a {
   background-color: #1d1d1d;
   color: white;
 }
+/* text-align: center; */
 .product-item {
-  text-align: center;
   border: 0.1px solid #ccc;
-  width: 300px;
-  height: 540px;
+  width: 200px;
+  height: 350px;
   cursor: pointer;
+}
+.product-item .product-name h2 {
+  padding: 0 10px;
+  font-size: 1.1rem;
+  margin: 0;
+}
+/* .product-item .product-name {
+  margin: 5px 0;
+} */
+.product-item .product-price h3 {
+  margin: 0;
 }
 .product-item .product-image img {
   width: 100%;
-  height: 300px;
+  height: 200px;
 }
 .product-item .product-details .product-price {
   display: flex;
   gap: 20px;
   justify-content: center;
+  color: #3f51b5;
+  margin: 10px 0;
+}
+.product-item button {
+  background-color: #3f51b5;
+  font-size: 0.8rem;
 }
 button:hover {
   background-color: antiquewhite;
