--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap");
 body {
   margin: 0;
   padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Lato", sans-serif;
+  font-size: 14px;
+  line-height: 24px;
+  font-style: normal;
+  font-weight: 400;
 }
 .b {
   border: 0.1px solid black;
@@ -29,13 +34,15 @@ body {
   flex-direction: column;
 }
 .btn {
-  height: 40px;
-  min-width: 150px;
-  padding: 10px 0;
-  margin: 10px 0;
-  outline: none;
-  cursor: pointer;
-  color: #1d1d1d;
+  /* height: 40px; */
+  /* min-width: 50px; */
+  /* padding: 10px; */
+  /* margin: 10px 0;
+  outline: none; */
+  /* cursor: pointer; */
+  /* color: #841414; */
+  /* padding: 0 5px; */
+  /* box-shadow: 0 3px 5px -1px #0003, 0.6px 10px #00000024, 0 1px 18px #0000001f; */
 }
 .gap-5 {
   gap: 10px;
@@ -63,10 +70,12 @@ body {
   height: 40px;
   background-color: #1d1d1d;
   border: none;
-  min-width: 140px;
+  min-width: 120px;
   color: white;
   cursor: pointer;
   font-weight: bold;
+  padding: 0 5px;
+  box-shadow: 0 3px 5px -1px #0003, 0.6px 10px #00000024, 0 1px 18px #0000001f;
 }
 .form-container {
   width: 500px;
