--- a/src/app/components/container/container.component.html
+++ b/src/app/components/container/container.component.html
@@ -1,6 +1,8 @@
 <div class="container">
+  <div class="content">
+    <app-product-list></app-product-list>
+  </div>
   <!-- <app-signup></app-signup> -->
-  <app-product-list></app-product-list>
   <!-- <app-loading></app-loading> -->
   <!-- <app-signin></app-signin> -->
 </div>
