--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -2,11 +2,9 @@
 } */
 .footer-content {
   background-color: #3f51b5;
-  height: calc(100vh - 70vh - 80px);
-  display: flex;
-  align-items: center;
+  min-height: calc(100vh - 70vh - 80px);
+
   font-size: 2rem;
-  justify-content: center;
   text-transform: uppercase;
   text-align: center;
 }
