--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,13 +1,13 @@
 <footer>
   <div class="footer-content">
     <div class="content">
-      <div class="row">
-        <div class="footer-widget">
+      <div class="row aic gap-10">
+        <div class="footer-widget flex-1">
           <div class="logo">{{siteName}}</div>
         </div>
-        <div class="footer-widget">
+        <div class="footer-widget flex-1">
           <h4 class="widget-title">Company</h4>
-          <ul>
+          <ul class="footer-list">
             <li><a href="#">About Us</a></li>
             <li><a href="#">Delivery Information</a></li>
             <li><a href="#">Private Policy</a></li>
@@ -17,9 +17,9 @@
             <li><a href="#">Careers</a></li>
           </ul>
         </div>
-        <div class="footer-widget">
+        <div class="footer-widget flex-1">
           <h4 class="widget-title">Company</h4>
-          <ul>
+          <ul class="footer-list">
             <li><a href="#">About Us</a></li>
             <li><a href="#">Delivery Information</a></li>
             <li><a href="#">Private Policy</a></li>
@@ -29,9 +29,21 @@
             <li><a href="#">Careers</a></li>
           </ul>
         </div>
-        <div class="footer-widget">
+        <div class="footer-widget flex-1">
           <h4 class="widget-title">Company</h4>
-          <ul>
+          <ul class="footer-list">
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Delivery Information</a></li>
+            <li><a href="#">Private Policy</a></li>
+            <li><a href="#">Terms &amp; Conditions</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Support Center</a></li>
+            <li><a href="#">Careers</a></li>
+          </ul>
+        </div>
+        <div class="footer-widget flex-1">
+          <h4 class="widget-title">Company</h4>
+          <ul class="footer-list">
             <li><a href="#">About Us</a></li>
             <li><a href="#">Delivery Information</a></li>
             <li><a href="#">Private Policy</a></li>
