Ajout des styles au footer- coté résponsif-

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="footer-content">
     <div class="content">
-      <div class="row aic gap-10">
+      <div class="row aic gap-10 wrap">
         <div class="footer-widget flex-1">
           <div class="logo">{{siteName}}</div>
         </div>
@@ -18,40 +18,44 @@
           </ul>
         </div>
         <div class="footer-widget flex-1">
-          <h4 class="widget-title">Company</h4>
+          <h4 class="widget-title">Account</h4>
           <ul class="footer-list">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Delivery Information</a></li>
-            <li><a href="#">Private Policy</a></li>
-            <li><a href="#">Terms &amp; Conditions</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Support Center</a></li>
-            <li><a href="#">Careers</a></li>
+            <li><a href="#">Sign In</a></li>
+            <li><a href="#">View Cart</a></li>
+            <li><a href="#">My Wishlist</a></li>
+            <li><a href="#">Track My Order</a></li>
+            <li><a href="#">Help Ticket</a></li>
+            <li><a href="#">Shipping Details</a></li>
+            <li><a href="#">Compare products</a></li>
           </ul>
         </div>
         <div class="footer-widget flex-1">
-          <h4 class="widget-title">Company</h4>
+          <h4 class="widget-title">Corporate</h4>
           <ul class="footer-list">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Delivery Information</a></li>
-            <li><a href="#">Private Policy</a></li>
-            <li><a href="#">Terms &amp; Conditions</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Support Center</a></li>
-            <li><a href="#">Careers</a></li>
+            <li><a href="#">Become a Vendor</a></li>
+            <li><a href="#">Affiliate Program</a></li>
+            <li><a href="#">Farm Business</a></li>
+            <li><a href="#">Farm Careers</a></li>
+            <li><a href="#">Our Suppliers></a></li>
+            <li><a href="#">Accessibility</a></li>
+            <li><a href="#">Promotions</a></li>
           </ul>
         </div>
         <div class="footer-widget flex-1">
-          <h4 class="widget-title">Company</h4>
+          <h4 class="widget-title">Popular</h4>
           <ul class="footer-list">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Delivery Information</a></li>
-            <li><a href="#">Private Policy</a></li>
-            <li><a href="#">Terms &amp; Conditions</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Support Center</a></li>
-            <li><a href="#">Careers</a></li>
+            <li><a href="#">Mike & Flavoured Milk</a></li>
+            <li><a href="#">Butter and Margarine</a></li>
+            <li><a href="#">Farm Business</a></li>
+            <li><a href="#">Farm Careers</a></li>
+            <li><a href="#">Our Suppliers></a></li>
+            <li><a href="#">Accessibility</a></li>
+            <li><a href="#">Promotions</a></li>
           </ul>
+        </div>
+        <div class="footer-widget flex-1">
+          <h4 class="widget-title">Install App</h4>
+
         </div>
       </div>
     </div>
