--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,5 +1,10 @@
 /* footer {
 } */
+footer .logo {
+  font-size: 2rem;
+  text-transform: uppercase;
+  padding: 20px 0;
+}
 .footer-content {
   background-color: #3f51b5;
   color: white;
@@ -10,6 +15,9 @@ footer .content {
 .footer-bottom {
   background-color: #091c8a;
   height: 70px;
+}
+.footer-widget {
+  min-width: 200px;
 }
 .footer-list {
   list-style: none;
