Ajout des icons et des styles à la page footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -55,7 +55,23 @@
         </div>
         <div class="footer-widget flex-1">
           <h4 class="widget-title">Install App</h4>
-
+          <p>From App Store or Google Play</p>
+          <div class="download-app flex gap-5">
+            <!-- <img src="./assets/images/icons/load.gif" alt="Appel stroe icon" srcset=""> -->
+            <img src="./assets/images/cards/Google-Play-icon.png" alt="Google Play Stroe Icon" srcset="" width="40px"
+              height="30px">
+            <img src="./assets/images/cards/appel-play-icon1.png" alt="Appel Stroe Icon" srcset="" width="40px"
+              height="30px">
+          </div>
+          <p>Secured Payement Gateways</p>
+          <div class="payement-methode flex gap-10">
+            <img src="./assets/images/cards/visa.png" alt="" srcset="" width="40px" height="30px">
+            <img src="./assets/images/cards/master-card.png" alt="" srcset="" width="40px" height="30px">
+            <img src="./assets/images/cards/pay-pal.png" alt="" srcset="" width="40px" height="30px">
+            <!-- <img src="./assets/images/cards/visa.png" alt="" srcset="" width="40px" height="30px">
+            <img src="./assets/images/cards/visa.png" alt="" srcset="" width="40px" height="30px">
+            <img src="./assets/images/cards/visa.png" alt="" srcset="" width="40px" height="30px"> -->
+          </div>
         </div>
       </div>
     </div>
