--- a/src/styles.css
+++ b/src/styles.css
@@ -75,14 +75,37 @@ body {
   transform: translate(-50%, -50%);
   /* border: solid #ccc; */
   background-color: white;
+  box-shadow: 0 3px 5px -1px #0003, 0.6px 10px #00000024, 0 1px 18px #0000001f;
 }
 form .form-line {
   min-height: 40px;
-  padding: 10px;
+  padding: 10px 0;
 }
 form .form-line input {
   font-size: 1.1rem;
   height: 40px;
+}
+form .btn {
+  height: 45px;
+  width: 100%;
+}
+form h2 {
+  text-align: center;
+  padding: 10px 0 0;
+}
+button:disabled {
+  /* background-color: gray; */
+  opacity: 0.7;
+  cursor: not-allowed;
+}
+.error {
+  color: red;
+}
+form p {
+  margin: 0;
+}
+.tac {
+  text-align: center;
 }
 @media screen and (max-width: 550px) {
   .form-container {
