Ajouter des styles à la page détails products -Ajouter des images sur le côté-

--- a/src/app/components/modal-product-view/modal-product-view.component.html
+++ b/src/app/components/modal-product-view/modal-product-view.component.html
@@ -9,15 +9,17 @@
       <!-- <h1>Product détails</h1> -->
       <h2>{{productss?.name?.substring(0, 25)}}</h2>
       <div class="modal-product-view-details-price">
-        <h4>$ {{(productss?.regular_price || 0)/100}}</h4>
+        <h4>$ {{(productss?.regular_price || 0)/100 | currency: "CAD "}}</h4>
         <del>
-          <h4>$ {{(productss?.sold_price || 0)/100 }}</h4>
+          <h4>$ {{(productss?.sold_price || 0)/100 | currency: "CAD " }}</h4>
         </del>
       </div>
       <div class="modal-product-view-details-created-at">
         Crée le : 12/12/2025
       </div>
-      <button (click)="fermerAffichage()" class="btn close">Fermer</button>
+      <div class="modal-product-view-details-button flex">
+        <button (click)="fermerAffichage()" class="btn close">Fermer</button>
+      </div>
     </div>
   </div>
 </div>
