--- a/src/app/components/product/product.component.css
+++ b/src/app/components/product/product.component.css
@@ -2,11 +2,18 @@
   margin-bottom: 20px;
   margin-top: 20px;
 }
+.single-product img {
+  cursor: pointer;
+}
+.single-product img.current {
+  border: 2px solid #3f51b5;
+}
 .single-product .single-product-image {
   justify-content: flex-end;
 }
-.single-product .single-product-image img {
-  width: 400px;
+.single-product .single-product-image-current img {
+  width: 100%;
+  height: 100%;
 }
 @media screen and (max-width: 900px) {
   .single-product {
