--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,12 @@ body {
 .flex-2 {
   flex: 2;
 }
+.flex-3 {
+  flex: 3;
+}
+.flex-4 {
+  flex: 4;
+}
 .aic {
   align-items: center;
 }
@@ -41,7 +47,7 @@ body {
   gap: 10px;
 }
 .content {
-  width: 80%;
+  width: 70%;
   margin: 0 auto;
   min-height: 70vh;
 }
@@ -60,7 +66,7 @@ body {
   height: 40px;
   background-color: #1d1d1d;
   border: none;
-  min-width: 120px;
+  min-width: 100%;
   color: white;
   cursor: pointer;
   font-weight: bold;
